fixed palette cutoff on mobile

--- a/src/components/arbeitsbereich.css
+++ b/src/components/arbeitsbereich.css
@@ -19,10 +19,13 @@
   .arbeitsbereich {
     flex-direction: column;
     justify-content: center;
+    width: 100%;
   }
 
-  .areaLeft,
-  .areaRight {
-    width: 110%;
+  .areaLeft {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
   }
 }
